# shl-wallet

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish-web.yml
app/: build.gradle.kts
app/src/androidTest/java/me/fhir/shcwallet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hobbit_matcher_rs.wasm  matcher_rs.wasm
app/src/main/java/me/fhir/shcwallet/: GetCredentialActivity.kt  HomeViewModel.kt  MainActivity.kt
app/src/main/java/me/fhir/shcwallet/data/db/: AppDatabase.kt  CombinedShcEntity.kt  ShcDao.kt
app/src/main/java/me/fhir/shcwallet/data/repository/: ShcRepository.kt
app/src/main/java/me/fhir/shcwallet/services/: ShlProcessorService.kt
app/src/main/java/me/fhir/shcwallet/ui/: GetCredentialScreenComposables.kt
app/src/main/java/me/fhir/shcwallet/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/me/fhir/shcwallet/util/: FhirShcParser.kt  SmartHealthCardParser.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/me/fhir/shcwallet/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
matcher_rs/: Cargo.toml
matcher_rs/src/: main.rs
web/: index.html
