[package]
name = "matcher_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true          # Link-Time Optimization
opt-level = 's'     # Optimize for size
strip = true        # Strip symbols to reduce size further

[dependencies]
# No external Rust dependencies are strictly needed for this hardcoded example.
# std::ffi::CString is part of the standard library.
